@@ -35,46 +35,10 @@ gradle.taskGraph.whenReady({ graph ->
 
 
 subprojects {
-  dependencies {
-    testCompile('com.github.stefanbirkner:system-rules:' + project.'system-rules.version') {
-      exclude module: 'junit-dep'
-    }
-    testCompile 'com.google.code.tempus-fugit:tempus-fugit:' + project.'tempus-fugit.version'
-    testCompile 'org.awaitility:awaitility:' + project.'awaitility.version'
-    testCompile 'edu.umd.cs.mtc:multithreadedtc:' + project.'multithreadedtc.version'
-    testCompile 'junit:junit:' + project.'junit.version'
-    testCompile 'org.assertj:assertj-core:' + project.'assertj-core.version'
-    testCompile 'org.hamcrest:hamcrest-all:' + project.'hamcrest-all.version'
-
-    testCompile 'org.mockito:mockito-core:' + project.'mockito-core.version'
-    testCompile 'org.powermock:powermock-core:' + project.'powermock.version'
-    testCompile 'org.powermock:powermock-module-junit4:' + project.'powermock.version'
-    testCompile 'org.powermock:powermock-api-mockito2:' + project.'powermock.version'
-
-    testCompile 'pl.pragmatists:JUnitParams:' + project.'JUnitParams.version'
-
-    testRuntime('cglib:cglib:' + project.'cglib.version') {
-      exclude module: 'org.apache.ant'
-    }
-  }
-
   // This configuration might be safely removed once the CategoryWithParameterizedRunnerFactory
   // and associated classes are themselves removed, per GEODE-5606
   configurations {
     apt
-  }
-
-  dependencies {
-    apt files("${rootProject.projectDir}/buildSrc/build/libs/buildSrc.jar")
-    apt(group: 'junit', name: 'junit', version: project.'junit.version') {
-      transitive = false
-    }
-    // Because EnsureCorrectRunsWithProcessor needs access to
-    // CategoryWithParameterizedRunnerFactory.
-    // buildSrc uses version 1.3.0, so we use it here instead of the local geode-junit project
-    apt(group: 'org.apache.geode', name: 'geode-junit', version: '1.3.0') {
-      transitive = false
-    }
   }
 
   compileTestJava {
@@ -138,6 +102,37 @@ subprojects {
   }
 
   dependencies {
+    apt files("${rootProject.projectDir}/buildSrc/build/libs/buildSrc.jar")
+    apt(group: 'junit', name: 'junit', version: project.'junit.version') {
+      transitive = false
+    }
+    // Because EnsureCorrectRunsWithProcessor needs access to
+    // CategoryWithParameterizedRunnerFactory.
+    // buildSrc uses version 1.3.0, so we use it here instead of the local geode-junit project
+    apt(group: 'org.apache.geode', name: 'geode-junit', version: '1.3.0') {
+      transitive = false
+    }
+
+    testCompile('com.github.stefanbirkner:system-rules:' + project.'system-rules.version') {
+      exclude module: 'junit-dep'
+    }
+    testCompile 'com.google.code.tempus-fugit:tempus-fugit:' + project.'tempus-fugit.version'
+    testCompile 'org.awaitility:awaitility:' + project.'awaitility.version'
+    testCompile 'junit:junit:' + project.'junit.version'
+    testCompile 'org.assertj:assertj-core:' + project.'assertj-core.version'
+    testCompile 'org.hamcrest:hamcrest-all:' + project.'hamcrest-all.version'
+
+    testCompile 'org.mockito:mockito-core:' + project.'mockito-core.version'
+    testCompile 'org.powermock:powermock-core:' + project.'powermock.version'
+    testCompile 'org.powermock:powermock-module-junit4:' + project.'powermock.version'
+    testCompile 'org.powermock:powermock-api-mockito2:' + project.'powermock.version'
+
+    testCompile 'pl.pragmatists:JUnitParams:' + project.'JUnitParams.version'
+
+    testRuntime('cglib:cglib:' + project.'cglib.version') {
+      exclude module: 'org.apache.ant'
+    }
+
     integrationTestCompile 'org.mockito:mockito-core:' + project.'mockito-core.version'
 
     integrationTestCompile 'org.powermock:powermock-core:' + project.'powermock.version'
@@ -173,27 +168,38 @@ subprojects {
   }
 
   task repeatDistributedTest(type: RepeatTest) {
+    dependsOn {distributedTest.taskDependencies}
     classpath = project.sourceSets.distributedTest.runtimeClasspath
     testClassesDirs = project.sourceSets.distributedTest.output.classesDirs
   }
 
   task repeatIntegrationTest(type: RepeatTest) {
+    dependsOn {integrationTest.taskDependencies}
     classpath = project.sourceSets.integrationTest.runtimeClasspath
     testClassesDirs = project.sourceSets.integrationTest.output.classesDirs
   }
 
   task repeatAcceptanceTest(type: RepeatTest) {
+    dependsOn {acceptanceTest.taskDependencies}
     classpath = project.sourceSets.acceptanceTest.runtimeClasspath
     testClassesDirs = project.sourceSets.acceptanceTest.output.classesDirs
   }
 
   task repeatUpgradeTest(type: RepeatTest) {
+    dependsOn {upgradeTest.taskDependencies}
     classpath = project.sourceSets.upgradeTest.runtimeClasspath
     testClassesDirs = project.sourceSets.upgradeTest.output.classesDirs
   }
 
   task repeatUnitTest(type: RepeatTest) {
+    dependsOn {test.taskDependencies}
     // default classpath works for this one.
+  }
+
+  configure([integrationTest, distributedTest, performanceTest, acceptanceTest, uiTest, upgradeTest]) {
+    if (project.hasProperty('excludeTest')) {
+      exclude project.getProperty('excludeTest').split(',')
+    }
   }
 
   configure([repeatDistributedTest, repeatIntegrationTest, repeatUpgradeTest, repeatUnitTest, repeatAcceptanceTest]) {
@@ -225,7 +231,12 @@ subprojects {
 
         maxHeapSize '768m'
         jvmArgs = ['-XX:+HeapDumpOnOutOfMemoryError', '-ea']
-        if (!testJVM.trim().isEmpty()) {
+        if (project.hasProperty('testJVMVer') &&  testJVMVer.toInteger() >= 9) {
+          jvmArgs += ["--add-opens", "java.xml/jdk.xml.internal=ALL-UNNAMED"]
+          jvmArgs += ["--add-opens", "java.base/jdk.internal.module=ALL-UNNAMED"]
+          jvmArgs += ["--add-opens", "java.base/java.lang.module=ALL-UNNAMED"]
+        }
+        if (project.hasProperty('testJVM') && !testJVM.trim().isEmpty()) {
           executable = "${testJVM}/bin/java"
         }
 
@@ -266,6 +277,16 @@ subprojects {
     }
   })
 
+  acceptanceTest {
+    // Acceptance tests may reach out and run a gfsh command from the assembled gfsh.
+    // If the test JVM version is specified, we must have the correct JAVA_HOME set for gfsh to use.
+    // See also environment configuration for parallel testing in docker.gradle
+    if (project.hasProperty('testJVM') && !testJVM.trim().isEmpty()) {
+      environment "JAVA_HOME", "${project.testJVM}"
+    }
+  }
+
+
   // Make precheckin task run all validation tests for checking in code.
   task precheckin(dependsOn: [build, acceptanceTest, integrationTest, distributedTest, upgradeTest]) {
     description 'Run this task before checking in code to validate changes. It runs tests beyond unitTest'
@@ -284,4 +305,3 @@ classes.dependsOn subprojects.compileAcceptanceTestJava
 classes.dependsOn subprojects.compileUiTestJava
 classes.dependsOn subprojects.compilePerformanceTestJava
 classes.dependsOn subprojects.compileUpgradeTestJava
-
